@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+phodevi: Avoid "11th Gen Intel" CPU string
+
 Phoronix Test Suite 10.0.0
 13 October 2020
 
